--- a/src/k8s/webapp.yaml
+++ b/src/k8s/webapp.yaml
@@ -22,6 +22,8 @@ spec:
       - env:
         - name: ASPNETCORE_ENVIRONMENT
           value: Production
+        - name: DOTNET_HOSTBUILDER__RELOADCONFIGONCHANGE
+          value: "false"
         image: luukjp/webapp:1.0
         imagePullPolicy: IfNotPresent
         name: webapp
