Update env for all

--- a/src/k8s/customermanagementapi-v1-istio.yaml
+++ b/src/k8s/customermanagementapi-v1-istio.yaml
@@ -24,6 +24,10 @@ spec:
       - env:
         - name: ASPNETCORE_ENVIRONMENT
           value: Production
+        - name: DOTNET_HOSTBUILDER__RELOADCONFIGONCHANGE
+          value: "false"
+        - name: DOTNET_USE_POLLING_FILE_WATCHER 
+          value: "true"
         image: luukjp/customermanagementapi:1.0
         imagePullPolicy: IfNotPresent
         name: customermanagementapi
