--- a/src/k8s/invoiceservice.yaml
+++ b/src/k8s/invoiceservice.yaml
@@ -22,6 +22,10 @@ spec:
       - env:
         - name: DOTNET_ENVIRONMENT
           value: Production
+        - name: DOTNET_HOSTBUILDER__RELOADCONFIGONCHANGE
+          value: "false"
+        - name: DOTNET_USE_POLLING_FILE_WATCHER 
+          value: "true"
         image: luukjp/invoiceservice:1.0
         imagePullPolicy: IfNotPresent
         name: invoiceservice
