--- a/src/k8s/rentalcarmanagementapi.yaml
+++ b/src/k8s/rentalcarmanagementapi.yaml
@@ -22,6 +22,10 @@ spec:
       - env:
         - name: ASPNETCORE_ENVIRONMENT
           value: Production
+        - name: DOTNET_HOSTBUILDER__RELOADCONFIGONCHANGE
+          value: "false"
+        - name: DOTNET_USE_POLLING_FILE_WATCHER 
+          value: "true"
         image: pitstop/rentalcarmanagementapi:1.0
         imagePullPolicy: IfNotPresent
         name: rentalcarmanagementapi
