--- a/src/k8s/notificationservice.yaml
+++ b/src/k8s/notificationservice.yaml
@@ -27,6 +27,6 @@ spec:
         - name: DOTNET_USE_POLLING_FILE_WATCHER 
           value: "true"
         image: luukjp/notificationservice:1.0
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         name: notificationservice
       restartPolicy: Always
