--- a/src/k8s/webapp-istio.yaml
+++ b/src/k8s/webapp-istio.yaml
@@ -25,7 +25,7 @@ spec:
         - name: ASPNETCORE_ENVIRONMENT
           value: Production
         image: luukjp/webapp:1.0
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         name: webapp
         ports:
         - containerPort: 7005
