--- a/src/k8s/customermanagementapi-v2-istio.yaml
+++ b/src/k8s/customermanagementapi-v2-istio.yaml
@@ -29,7 +29,7 @@ spec:
         - name: DOTNET_USE_POLLING_FILE_WATCHER 
           value: "true"
         image: luukjp/customermanagementapi:2.0
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         name: customermanagementapi
         ports:
         - containerPort: 5100
