--- a/src/k8s/logserver.yaml
+++ b/src/k8s/logserver.yaml
@@ -23,7 +23,7 @@ spec:
         - name: ACCEPT_EULA
           value: "Y"
         image: datalust/seq:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         name: logserver
         ports:
         - containerPort: 80
