--- a/src/k8s/rentalmanagementeventhandler.yaml
+++ b/src/k8s/rentalmanagementeventhandler.yaml
@@ -27,6 +27,6 @@ spec:
         - name: DOTNET_USE_POLLING_FILE_WATCHER 
           value: "true"
         image: luukjp/rentalmanagementeventhandler:1.0
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         name: rentalmanagementeventhandler
       restartPolicy: Always
