--- a/src/k8s/sqlserver-istio.yaml
+++ b/src/k8s/sqlserver-istio.yaml
@@ -28,7 +28,7 @@ spec:
         - name: SA_PASSWORD
           value: 8jkGh47hnDw89Haq8LN2
         image: mcr.microsoft.com/azure-sql-edge
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         name: sqlserver
         ports:
         - containerPort: 1433
